--- a/css/styles.css
+++ b/css/styles.css
@@ -16,7 +16,7 @@ font-family: 'Dosis', sans-serif;
 text-shadow: 2px 2px #000;
 
 }
-.instrument {
+.instrument span {
 float: left;
 padding: 150px;
 height: 150px;
@@ -42,6 +42,14 @@ text-shadow: 0px -1px 1px #1e2d4d;
 width: 150px;
 -webkit-background-clip: padding-box;
 }
+.instrument span:hover {
+-webkit-box-shadow: inset 0 0px 20px 1px #87adff, 0px 1px 0 #1d2c4d, 0 6px 0px #1f3053, 0 8px 4px 1px #111111;
+box-shadow: inset 0 0px 20px 1px #87adff, 0px 1px 0 #1d2c4d, 0 6px 0px #1f3053, 0 8px 4px 1px #111111;
+cursor: pointer; }
+.instrument span:active {
+-webkit-box-shadow: inset 0 1px 10px 1px #5c8bee, 0 1px 0 #1d2c4d, 0 2px 0 #1f3053, 0 4px 3px 0 #111111;
+box-shadow: inset 0 1px 10px 1px #5c8bee, 0 1px 0 #1d2c4d, 0 2px 0 #1f3053, 0 4px 3px 0 #111111;
+margin-top: 20px;}
 
 h1{
 width: 100%;
@@ -52,15 +60,6 @@ margin: auto;
 background: url('../img/logo.png') no-repeat center top;
 height: 420px;
 }
-.instrument:hover {
--webkit-box-shadow: inset 0 0px 20px 1px #87adff, 0px 1px 0 #1d2c4d, 0 6px 0px #1f3053, 0 8px 4px 1px #111111;
-box-shadow: inset 0 0px 20px 1px #87adff, 0px 1px 0 #1d2c4d, 0 6px 0px #1f3053, 0 8px 4px 1px #111111;
-cursor: pointer; }
-.instrument:active {
--webkit-box-shadow: inset 0 1px 10px 1px #5c8bee, 0 1px 0 #1d2c4d, 0 2px 0 #1f3053, 0 4px 3px 0 #111111;
-box-shadow: inset 0 1px 10px 1px #5c8bee, 0 1px 0 #1d2c4d, 0 2px 0 #1f3053, 0 4px 3px 0 #111111;
-margin-top: 20px;}
-
 audio {
 display: none;
 }
