--- a/css/styles.css
+++ b/css/styles.css
@@ -45,11 +45,13 @@ width: 150px;
 .instrument span:hover {
 -webkit-box-shadow: inset 0 0px 20px 1px #87adff, 0px 1px 0 #1d2c4d, 0 6px 0px #1f3053, 0 8px 4px 1px #111111;
 box-shadow: inset 0 0px 20px 1px #87adff, 0px 1px 0 #1d2c4d, 0 6px 0px #1f3053, 0 8px 4px 1px #111111;
-cursor: pointer; }
+cursor: pointer;
+}
 .instrument span:active {
 -webkit-box-shadow: inset 0 1px 10px 1px #5c8bee, 0 1px 0 #1d2c4d, 0 2px 0 #1f3053, 0 4px 3px 0 #111111;
 box-shadow: inset 0 1px 10px 1px #5c8bee, 0 1px 0 #1d2c4d, 0 2px 0 #1f3053, 0 4px 3px 0 #111111;
-margin-top: 20px;}
+margin-top: 20px;
+}
 
 h1{
 width: 100%;
@@ -70,7 +72,6 @@ ul {
 width: 100%;
 float: left;
 display: block;
-display: none;
 }
 p{
 color: #fff;
@@ -104,6 +105,9 @@ a:hover{
 }
 h2 {
 display: none;
+}
+ul li {
+	float: left;
 }
 
 
