--- a/css/styles.css
+++ b/css/styles.css
@@ -27,13 +27,9 @@ text-shadow: 2px 2px #000;
 
 .instrument span {
 float: left;
-padding: 150px;
-height: 150px;
 border: 1px solid #000;
 background: #fff;
-list-style: none;
-border-radius: 30px;
-margin: 15px;
+border-radius: 20px;
 display: block;
 background: #4162a8;
 border-top: 1px solid #38538c;
@@ -44,11 +40,8 @@ border-left: 1px solid #1f2d4d;
 box-shadow: inset 0 1px 10px 1px #5c8bee, 0px 1px 0 #1d2c4d, 0 6px 0px #1f3053, 0 8px 4px 1px #111111;
 color: #fff;
 font: bold 20px/1 "helvetica neue", helvetica, arial, sans-serif;
-margin-bottom: 10px;
-padding: 10px 0 12px 0;
-text-align: center;
-text-shadow: 0px -1px 1px #1e2d4d;
-width: 150px;
+padding: 25%;
+text-shadow: 0px 1px 1px #000;
 -webkit-background-clip: padding-box;
 }
 .instrument span:hover {
@@ -74,17 +67,19 @@ text-indent: -9999px;
 margin: auto;
 background: url('../img/logo.png') no-repeat center top;
 height: 420px;
+z-index: 100;
 }
 audio {
 display: none;
-}
-h1 {
-z-index: 100;
 }
 ul { 
 width: 100%;
 float: left;
 display: block;
+}
+ul li {
+	float: left;
+	margin: 5%;
 }
 p{
 color: #fff;
@@ -116,19 +111,12 @@ margin-bottom: 20px;
 a:hover{
 	color: #ccc;	
 }
-h2 {
-display: none;
-}
-ul li {
-	float: left;
-}
-
 
 @media (max-width: 500px) {
 
 h1 {
 background-size: 100%;
-height: 270px;
+height: 220px;
 padding-bottom: 0;
 }
 
