--- a/css/styles.css
+++ b/css/styles.css
@@ -55,6 +55,11 @@ box-shadow: inset 0 1px 10px 1px #5c8bee, 0 1px 0 #1d2c4d, 0 2px 0 #1f3053, 0 4p
 margin-top: 10px;
 }
 
+.instrument.hit span {
+    background-color: white!important;
+}
+
+
 .pattern.active {
     color: #F00;
 }
