--- a/css/styles.css
+++ b/css/styles.css
@@ -1,5 +1,5 @@
 html {
-width: 100%;
+width: 100%;height: 100%;
 }
 body{
 background: #062d47; /* Old browsers */
@@ -13,8 +13,8 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#062d47', end
 }
 body * {
 font-family: 'Dosis', sans-serif;
-text-shadow: 2px 2px #000;
-
+text-shadow: 1px 1px 1px #000;
+height: 100%;
 }
 
 .instrument {
@@ -54,24 +54,20 @@ cursor: pointer;
 box-shadow: inset 0 1px 10px 1px #5c8bee, 0 1px 0 #1d2c4d, 0 2px 0 #1f3053, 0 4px 3px 0 #111111;
 margin-top: 10px;
 }
-
 .instrument.hit span {
     background-color: white!important;
 }
-
-
 .pattern.active {
     color: #F00;
 }
-
 h1{
 width: 100%;
-height: 260px;
+height: 310px;
 display: block;
 text-indent: -9999px;
 margin: auto;
 background: url('../img/logo.png') no-repeat center top;
-height: 420px;
+background-size: 30%;
 z-index: 100;
 }
 audio {
@@ -90,9 +86,9 @@ ul li {
 }
 p{
 color: #fff;
-font-size: 2em;
+font-size: 1.8em;
 text-align: center;
-padding: 5px 20px;
+padding: 1%;
 }
 input {
 background: #0080ab;
@@ -100,13 +96,13 @@ border-radius: 6px;
 padding: 5px;
 color: #fff;
 font-size: 1em;
-width: 90%;
+width: 50%;
 margin: auto;
 display: block;
 border: 1px solid #333;
 }
 a{
-font-size: 9em;
+font-size: 5em;
 color: #fff;
 text-decoration: none;
 text-align: center;
@@ -119,11 +115,19 @@ a:hover{
 	color: #ccc;	
 }
 
-@media (max-width: 500px) {
+@media (max-width: 800px) {
+
+h1 {
+background-size: 60%;
+height: 290px;
+}
+}
+
+@media (max-width: 480px) {
 
 h1 {
 background-size: 100%;
-height: 220px;
+height: 210px;
 padding-bottom: 0;
 }
 ul li {
@@ -131,5 +135,8 @@ ul li {
 	margin: 5%;
 	width: 40%;
 	height: 70px;
+}
+input{
+	width: 80%;
 }
 }
