--- a/css/styles.css
+++ b/css/styles.css
@@ -63,7 +63,6 @@ margin-bottom: 10px;
 a:hover{
 color: #ccc;	
 }
-
 a:active{
 margin-top: 2px;	
 }
@@ -111,14 +110,33 @@ background-color: white!important;
 color: #F00;
 }
 
-
+@media (min-width: 481px) and (max-width: 767px) { 
+h1 {
+width: 150px;
+height: 92px;
+background-size: 100%;
+height: 200px;
+padding-bottom: 0;
+margin: 10px 20px 0 0;
+float: left;
+}
+p {
+padding:10px 0;
+text-align: left;
+}
+input {
+margin-left: 15px;
+}
+a{
+margin-bottom: 0;
+}
+}
 
 @media (max-width: 480px) {
-
 h1 {
 width: 100%;
 background-size: 100%;
-height: 170px;
+height: 200px;
 padding-bottom: 0;
 margin-top: 10px;
 }
@@ -136,5 +154,22 @@ font-size: 5em;margin-bottom: 5px;
 }
 p{
 	font-size: 1.5em;
+	padding: 1% 9.5%;
+}
+input {
+background: #0080ab;
+border-radius: 6px;
+padding: 5px;
+color: #fff;
+font-size: 1em;
+width: 25%;
+margin: auto;
+display: block;
+border: 1px solid #333;
 }
 }
+
+
+
+
+
