--- a/css/styles.css
+++ b/css/styles.css
@@ -112,7 +112,7 @@ cursor: pointer;
 box-shadow: inset 0 1px 10px 1px #5c8bee, 0 1px 0 #1d2c4d, 0 2px 0 #1f3053, 0 4px 3px 0 #111111;
 margin-top: 10px;
 }
-.instrument.hit span {
+.instrument.hit a {
 background-color: white!important;
 }
 .pattern.active {
