--- a/css/styles.css
+++ b/css/styles.css
@@ -9,7 +9,7 @@ body * {
 font-family: 'Dosis', sans-serif;
 height: 100%;
 }
-h1, p, a {
+h1, p, a, li, em {
 text-shadow: 1px 1px 1px #000;
 }
 input::-webkit-input-placeholder, input:-ms-input-placeholder, input::-moz-placeholder, input::-webkit-input-placeholder {
@@ -35,15 +35,17 @@ background: url('../img/logo.png') no-repeat center top;
 z-index: 100;
 background-size: 100%;
 }
-ul { 
+#instruments { 
 width: 100%;
 float: left;
 display: block;
+margin-top: -60px;
 }
-ul li {
+#instruments li {
 float: left;
-margin: 5%;
-width: 40%;
+margin: 35px 10px;
+width: 30%;
+height: 30px;
 }
 p{
 color: #fff;
@@ -84,33 +86,30 @@ opacity: 0.4;
  opacity: 1;
 }
 .instrument a{
-float: left;
 border: 1px solid #000;
 border-radius: 20px;
 display: block;
-border-top: 1px solid #38538c;
-border-right: 1px solid #1f2d4d;
-border-bottom: 1px solid #151e33;
-border-left: 1px solid #1f2d4d;
--webkit-box-shadow: inset 0 1px 10px 1px #5c8bee, 0px 1px 0 #1d2c4d, 0 6px 0px #1f3053, 0 8px 4px 1px #111111;
-box-shadow: inset 0 1px 10px 1px #5c8bee, 0px 1px 0 #1d2c4d, 0 6px 0px #1f3053, 0 8px 4px 1px #111111;
+-webkit-box-shadow: inset 0 1px 3px 1px #000, 0px 1px 0 #1d2c4d, 0 6px 0px #1f3053, 0 8px 1px 1px #111111;
+box-shadow: inset 0 1px 6px 1px #000, 0px 1px 0 #000, 0 6px 0px #000, 0 8px 1px 1px #000;
 color: #fff;
 font: bold 20px/1 "helvetica neue", helvetica, arial, sans-serif;
-padding: 10% 0;
+padding: 20px;
 text-shadow: 0px 1px 1px #000;
 -webkit-background-clip: padding-box;
 text-align: center;
-width: 100%;
+width: 50%;
+text-decoration: none;
+margin: auto;
 }
 .instrument a:hover {
--webkit-box-shadow: inset 0 0px 20px 1px #87adff, 0px 1px 0 #1d2c4d, 0 6px 0px #1f3053, 0 8px 4px 1px #111111;
-box-shadow: inset 0 0px 20px 1px #87adff, 0px 1px 0 #1d2c4d, 0 6px 0px #1f3053, 0 8px 4px 1px #111111;
+-webkit-box-shadow: inset 0 0px 15px 1px #000, 0px 1px 0 #000, 0 6px 0px #000, 0 8px 4px 1px #000;
+box-shadow: inset 0 0px 15px 1px #000, 0px 1px 0 #000, 0 6px 0px #000, 0 8px 4px 1px #000;
 cursor: pointer;
 }
 .instrument a:active {
--webkit-box-shadow: inset 0 1px 10px 1px #5c8bee, 0 1px 0 #1d2c4d, 0 2px 0 #1f3053, 0 4px 3px 0 #111111;
-box-shadow: inset 0 1px 10px 1px #5c8bee, 0 1px 0 #1d2c4d, 0 2px 0 #1f3053, 0 4px 3px 0 #111111;
-margin-top: 10px;
+-webkit-box-shadow: inset 0 1px 10px 1px #333, 0 1px 0 #000, 0 2px 0 #333, 0 4px 3px 0 #333;
+box-shadow: inset 0 1px 10px 1px #333, 0 1px 0 #333, 0 2px 0 #333, 0 4px 3px 0 #333;
+margin-top: 5px;
 }
 .instrument.hit a {
 background-color: white!important;
@@ -119,7 +118,65 @@ background-color: white!important;
 color: #F00;
 }
 
+/* URL */
+em {
+	color: #039dff;
+	font-size: 1.5em;
+}
+em span {
+	color: #acdd00;
+}
+
+
+.patterns li a{
+	padding: 5px 0;
+	border: 1px solid #333;
+	background: #005b92;
+	border-radius: 9px;
+	float: left;
+	width: 16.6%;
+	text-align: center;
+	color: #fff;
+	margin:8%;
+	text-decoration: none;
+	font-size: 92%;
+}
+.patterns li a:hover{
+	opacity: .6;
+}
+/* button colors*/
+.a a {
+	-webkit-box-shadow: inset 0 1px 3px 1px #3d0200, 0px 1px 0 #3d0200, 0 6px 0px #1f3053, 0 8px 1px 1px #3d0200;
+	box-shadow: inset 0 1px 6px 1px #3d0200, 0px 1px 0 #3d0200, 0 6px 0px #3d0200, 0 8px 1px 1px #3d0200;
+}
+.b a{
+	-webkit-box-shadow: inset 0 1px 3px 1px #642b12, 0px 1px 0 #642b12, 0 6px 0px #642b12, 0 8px 1px 1px #642b12;
+	box-shadow: inset 0 1px 6px 1px #642b12, 0px 1px 0 #642b12, 0 6px 0px #642b12, 0 8px 1px 1px #642b12;
+}
+.c a{
+	-webkit-box-shadow: inset 0 1px 3px 1px #6b4d00, 0px 1px 0 #6b4d00, 0 6px 0px #6b4d00, 0 8px 1px 1px #6b4d00;
+	box-shadow: inset 0 1px 6px 1px #6b4d00, 0px 1px 0 #6b4d00, 0 6px 0px #6b4d00, 0 8px 1px 1px #6b4d00;
+}
+
+.d a{
+	-webkit-box-shadow: inset 0 1px 3px 1px #183400, 0px 1px 0 #183400, 0 6px 0px #183400, 0 8px 1px 1px #183400;
+	box-shadow: inset 0 1px 6px 1px #183400, 0px 1px 0 #183400, 0 6px 0px #183400, 0 8px 1px 1px #183400;
+}
+.e a{
+	-webkit-box-shadow: inset 0 1px 3px 1px #182f5e, 0px 1px 0 #182f5e, 0 6px 0px #182f5e, 0 8px 1px 1px #182f5e;
+	box-shadow: inset 0 1px 6px 1px #182f5e, 0px 1px 0 #182f5e, 0 6px 0px #182f5e, 0 8px 1px 1px #182f5e;
+}
+.f a{
+	-webkit-box-shadow: inset 0 1px 3px 1px #420055, 0px 1px 0 #420055, 0 6px 0px #420055, 0 8px 1px 1px #420055;
+	box-shadow: inset 0 1px 6px 1px #420055, 0px 1px 0 #420055, 0 6px 0px #420055, 0 8px 1px 1px #420055;
+}
+/* button colors*/
+
+
 @media (min-width: 481px) and (max-width: 767px) { 
+header {
+	width: 100%;
+}
 h1 {
 width: 150px;
 height: 92px;
@@ -128,6 +185,9 @@ height: 100px;
 padding-bottom: 0;
 margin: 10px 20px 0 0;
 float: left;
+}
+#instruments{
+	margin-top: -20px;
 }
 p {
 padding:10px 0;
@@ -143,23 +203,16 @@ margin-bottom: 0;
 }
 
 
-@media (max-width: 480px) and (orientation : landscape) {
-
-h1 {
-	height: 350px;padding-bottom: 30px;
-	opacity: .5;
-	margin: 0;
-}
-input {
-margin-left: 15px;
-}
-}
 
 @media (max-width: 480px) {
-header{
-	width: 100%;
+header{width: 100%;}
+em {
+font-size: 1em;
+width: 100%;
+text-align: center;
+float: left;
+padding-bottom: 30px;
 }
-
 h1 {
 background: url('../img/logo-s.png') no-repeat center top;
 width: 100%;
@@ -168,7 +221,10 @@ height: 60px;
 padding-bottom: 0;
 margin-top: 10px;
 }
-ul li {
+#instruments{
+	margin: 0;
+}
+#instruments li {
 float: left;
 height: 41px;
 margin: 0 6% 23%;
@@ -195,5 +251,12 @@ width: 80%;
 margin: auto;
 display: block;
 border: 1px solid #333;
+}
+.patterns li a{
+	padding: 10px;
+	display: block;
+	width: 98%;
+	margin:1%;
+	border-radius: 0;
 }
 }
