--- a/css/styles.css
+++ b/css/styles.css
@@ -127,14 +127,14 @@ em span {
 	color: #039dff;
 }
 
-
+.patterns li{margin: 35px 10px;width: 29%;float: left;} 
 .patterns li a{
 	padding: 5px 0;
 	border: 1px solid #333;
 	background: #005b92;
 	border-radius: 9px;
 	float: left;
-	width: 16.6%;
+	width: 90%;
 	text-align: center;
 	color: #fff;
 	margin:8%;
@@ -144,6 +144,8 @@ em span {
 .patterns li a:hover{
 	opacity: .6;
 }
+
+
 /* button colors*/
 .a a {
 	-webkit-box-shadow: inset 0 1px 3px 1px #3d0200, 0px 1px 0 #3d0200, 0 6px 0px #1f3053, 0 8px 1px 1px #3d0200;
@@ -252,11 +254,19 @@ margin: auto;
 display: block;
 border: 1px solid #333;
 }
+.patterns {
+
+	margin-top: 20px;float: left;width: 100%;
+}
+.patterns li{
+	margin: 0;
+	width: 33%;
+}
 .patterns li a{
-	padding: 10px;
+	padding: 10px 0;
 	display: block;
-	width: 98%;
-	margin:1%;
+	width: 100%;
+	margin:0%;
 	border-radius: 0;
 }
 }
