--- a/css/styles.css
+++ b/css/styles.css
@@ -23,6 +23,9 @@ header {
 }
 audio {
 display: none;
+width: 0;
+height: 0;
+overflow: hidden;
 }
 h1{
 width: 200px;
@@ -205,7 +208,6 @@ margin-bottom: 0;
 }
 
 
-
 @media (max-width: 480px) {
 header{width: 100%;}
 em {
@@ -255,7 +257,6 @@ display: block;
 border: 1px solid #333;
 }
 .patterns {
-
 	margin-top: 20px;float: left;width: 100%;
 }
 .patterns li{
