--- a/css/styles.css
+++ b/css/styles.css
@@ -68,7 +68,7 @@ display: block;
 border: 1px solid #333;
 }
 a.start{
-font-size: 10em;
+font-size: 20em;
 color: #fff;
 text-decoration: none;
 text-align: center;
@@ -268,8 +268,8 @@ border: 1px solid #333;
 margin-top: 20px;float: left;width: 100%;
 }
 .patterns li{
-margin: 0;
-width: 33%;
+margin: 0 3px;
+width: 31%;
 }
 .patterns li a{
 padding: 10px 0;
@@ -277,5 +277,6 @@ display: block;
 width: 100%;
 margin:0%;
 border-radius: 0;
+border: 3px solid #000;
 }
 }
